// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#shapeMultiSeries should produce correct shape 1`] = `
Array [
  Object {
    "key": "series0",
    "values": Array [
      Object {
        "seriesKey": "series0",
        "xKey": 1,
        "yKey": "axisName",
      },
    ],
  },
  Object {
    "key": "series1",
    "values": Array [
      Object {
        "seriesKey": "series1",
        "xKey": 2,
        "yKey": "axisName",
      },
    ],
  },
]
`;

exports[`#shapeSingleSeries should produce correct shape 1`] = `
Array [
  Object {
    "key": "series1",
    "values": Array [
      Object {
        "xKey": 1,
        "yKey": "axisName",
      },
      Object {
        "xKey": 2,
        "yKey": "axisName",
      },
    ],
  },
]
`;
